--- a/src/index.html
+++ b/src/index.html
@@ -2,18 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Vue + Webpack</title>
-    <link rel="stylesheet" type="text/css" href="build/app.css">
+    <title>Vue Boilerplate</title>
+    <link rel="stylesheet" type="text/css" href="dist/app.css">
   </head>
   <body>
-    <div id="app">
-      <h1>Hello App!</h1>
-      <p>
-        <a v-link="{ path: '/foo' }">Go to Foo</a>
-        <a v-link="{ path: '/bar' }">Go to Bar</a>
-      </p>
-      <router-view></router-view>
-    </div>
-    <script src="build/app.js"></script>
+    <div id="app"></div>
+    <script src="dist/app.js"></script>
   </body>
 </html>
