--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Vue Boilerplate</title>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="dist/app.css">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <router-view></router-view>
+    </div>
     <script src="dist/app.js"></script>
   </body>
 </html>
