--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <title>Vue Boilerplate</title>
     <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="dist/app.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/app.css">
   </head>
   <body>
     <div id="app">
       <router-view></router-view>
     </div>
-    <script src="dist/app.js"></script>
+    <script src="assets/js/app.js"></script>
   </body>
 </html>
