--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Vue Boilerplate</title>
+    <title>{{ seo.title || '404' }}</title>
+    <meta v-if="seo.description" name="description" :content="seo.description">
     <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="assets/css/app.css">
   </head>
   <body>
-    <div id="app">
-      <router-view></router-view>
-    </div>
+    <router-view></router-view>
     <script src="assets/js/app.js"></script>
   </body>
 </html>
